<resources>
    <string name="app_name">AgricultON</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="txtEmail">Email</string>
    <string name="txtContrasena">Contraseña</string>
    <string name="txtNombreRegistrarse">Nombre</string>
    <string name="txtRegistrarseApellido">Primer Apellido</string>
    <string name="txtCorreoElectronico">Correo Electrónico</string>
    <string name="txtFechaDeNacimiento">Fecha de nacimiento</string>
    <string name="txtConfirmarCotraseña">Confirmar Contraseña</string>
    <string name="txtCrearCuenta">Crear Cuenta</string>
    <string name="Configuracion">Configuración</string>
    <string name="CerrrarSesion">Cerrar Sesión</string>
    <string name="AcercaDe">Acerca De</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="campos">Campos</string>
    <string name="noticias">Noticias</string>
    <string name="title_activity_row_data">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="productos">Productos</string>
    <string name="newNombreCultivo">Nombre del cultivo</string>
    <string name="newDescripcion">Descripción del cultivo...</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="ultimoAcceso">Hora de último acceso</string>
    <string name="Pasos">Pasos</string>
    <string name="btnIntroducir">Introducir Datos</string>
    <string name="registro_correcto">Usuario registrado correctamente</string>
    <string name="login_correcto">Inicio de sesión realizado correctamente</string>
    <string name="text_member">¿Tienes cuenta? Inicia Sesión</string>
    <string name="agriculton">AgricultON</string>
    <string name="introduccion">Aplicación que tiene como fin ayudar al agricultor en su trabajo. La aplicación puede usarse como una especie de Wikipedia sobre la que añadir productos y sus descripciones. Además se sincroniza con Google Maps para visualizar la posición exacta de los campos.</string>
    <string name="quienes">¿Quiénes somos?</string>
    <string name="somos">Somos una empresa StartUp que se encarga de desarrollo software y la integración de sistemas de información a la medida del cliente.</string>
    <string name="startUp">Startup es una empresa de nueva creación que comercializa productos y/o servicios a través del uso intensivo de las tecnologías de la información y la comunicación (TIC’s), con un modelo de negocio escalable el cual le permite un crecimiento rápido y sostenido en el tiempo. Este fuerte componente tecnológico les permite poder escalar su negocio de forma ágil y rápida, y con una necesidad de capital inferior a las empresas tradicionales.</string>
    <string name="Aviso">Aviso:</string>
    <string name="aviso_">Aplicación aún en fase de desarrollo. Se recomienda tener activadas las actualizaciones autómaticas para recibir las últimas mejoras y funcionalidades aún sin implementar.</string>
    <string name="redes">Síguenos en nuestras redes sociales:</string>
    <string name="linkRedes">agricultON en Twitter, Facebook e Instagram</string>
    <string name="autores">Autores</string>
    <string name="juanma">Juan Manuel Porrero Almansa</string>
    <string name="correroJuanma">JuanManuel.Porrero@alu.uclm.es</string>
    <string name="alonso">Alonso Díaz Sobrino</string>
    <string name="correoAlonso">Alonso.Diaz@alu.uclm.es</string>
    <string name="desi">Desiderio Almansa Porrero</string>
    <string name="correoDesi">Desiderio.Almansa@alu.uclm.es</string>
    <string name="infoAutor">Se trata de una aplicación con fines académicos que ha sido desarrollada como parte de proyecto de laboratorio en la asignatura Gestión de Sistemas de Información de la Escuela Superior Informática de Ciudad Real durante el curso 2020/2021.</string>
    <string name="Copyright">Copyright</string>
    <string name="copy">Cualquier forma de reproducción, distribución, comunicación pública o transformación de esta obra solo puede ser realizada con la autorización de sus titulares, salvo excepción prevista por la ley.</string>
    <string name="copy2">AgricultON todos los derechos reservados.</string>
    <string name="noimplementada">Funcionalidad aún no implementada</string>
</resources>