<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acercaDe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/rellayFramigham"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/headings">

                <TextView
                    android:id="@+id/txtFase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/agriculton"
                    android:textColor="@color/colorTitulos"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorAccent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rellayInfoFramigham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rellayFramigham">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginTop="10dp"
                        android:text="@string/introduccion" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/quienes"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/somos" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/startUp" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/redes"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/linkRedes" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/Aviso"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/aviso_" />


                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rellayAutor"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/rellayInfoFramigham"
                android:background="@color/headings">

                <TextView
                    android:id="@+id/txtAutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/autores"
                    android:textColor="@color/colorTitulos"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorAccent" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rellayInfoAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rellayAutor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/juanma"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/correroJuanma"
                        android:textColor="@color/url" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alonso"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/correoAlonso"
                        android:textColor="@color/url" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desi"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/correoDesi"
                        android:textColor="@color/url" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/infoAutor"/>

                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:src="@drawable/uclm"
                        android:layout_marginBottom="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rellayBibliografia"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/rellayInfoAutor"
                android:background="@color/headings">

                <TextView
                    android:id="@+id/txtBibliografia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/Copyright"
                    android:textColor="@color/colorTitulos"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorAccent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rellayInfoBibliografia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rellayBibliografia">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/copy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/copy2" />




                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>